tests/cli_diagnostics/run_python_ffi_sandbox_required.stderr.golden
tests/fixtures/run_python_ffi.curlee:2:12: error: sandbox required
  |
  |   unsafe { python_ffi.call(); }
  |            ^^^^^^^^^^^^^^^^^
